experimental/ir/testdata/syntax/2023_syntax.proto.stderr.txt
error: editions must use the `edition` keyword
  --> testdata/syntax/2023_syntax.proto:2:1
   |
 2 | syntax = 2023;
   | ^^^^^^
  help: replace with `edition`
   |
 2 | - syntax = 2023;
 2 | + edition = 2023;

error: the value of a `syntax` declaration must be a string literal
  --> testdata/syntax/2023_syntax.proto:2:10
   |
 2 | syntax = 2023;
   |          ^^^^
  help: add quotes to make this a string literal
   |
 2 | syntax = "2023";
   |          +    +

encountered 2 errors
